i-magiccap/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: i-magiccap
spec:
  replicas: 2
  serviceName: i-magiccap
  selector:
    matchLabels:
      run: i-magiccap
  template:
    metadata:
      labels:
        run: i-magiccap
    spec:
      containers:
      - name: i-magiccap
        image: registry.gitlab.com/jakemakesstuff/i-magiccap-v2
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            port: 8000
            path: /healthcheck
          initialDelaySeconds: 3
          periodSeconds: 3
        livenessProbe:
          httpGet:
            port: 8000
            path: /healthcheck
          initialDelaySeconds: 3
          periodSeconds: 3
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "150Mi"
            cpu: "100m"
      imagePullSecrets:
      - name: gitlab
